# dynamics_lib

parts/: CMakeLists.txt
parts/actuators/motor_propeller_pair/: motor_propeller_pair.h
parts/structural/rigid/: CMakeLists.txt
parts/structural/rigid/arm/: arm.h
parts/structural/rigid/quadcopter_frame/: quadcopter_frame.cpp  quadcopter_frame.h
parts/structural/rigid/quadcopter_frame_plus/: quadcopter_frame_plus.cpp  quadcopter_frame_plus.h
parts/structural/rigid/quadcopter_frame_x/: quadcopter_frame_x.cpp  quadcopter_frame_x.h
primitives/actuators/: CMakeLists.txt
primitives/actuators/motor/: motor.h
primitives/sensors/: CMakeLists.txt
primitives/structural/: CMakeLists.txt
primitives/structural/rigidbody/: rigidbody.h
primitives/structural/softbody/: softbody.h
